deployment/frontend/admin/admin-deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: admin-ui
    app.openshift.io/runtime: nodejs
    application: admin-ui
  name: admin-ui
spec:
  replicas: 1
  selector:
    deploymentconfig: admin-ui
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: admin-ui
        deploymentconfig: admin-ui
    spec:
      containers:
      - env:
        - name: ADMIN_USERNAME
          value: admin
        image: quay.io/uksummit2023/2023-game-admin-hq:latest
        imagePullPolicy: Always
        name: admin-ui
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
  triggers:
  - type: ConfigChange
