deployment/frontend/admin/admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: admin-ui
    application: admin-ui
  name: admin-ui
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: admin-ui
