deployment/frontend/admin/admin-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: admin-ui
    application: admin-ui
  name: admin-ui
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: admin-ui
